--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,17 @@
   <link rel="stylesheet" href="statics/styles.css">
   <link rel="stylesheet" href="statics/contact.css">
 </head>
-<script>
-  // Scroll progress bar
-  window.addEventListener('scroll', function() {
-    const scrollProgress = document.getElementById('scroll-progress');
-    const scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-    const scrollHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-    const scrollPercent = (scrollTop / scrollHeight) * 100;
-    scrollProgress.style.width = scrollPercent + '%';
-  });
-</script>
-<body>
+<body id="top">
+  <a href="#top" class="top-banner"></a>
+  <script>
+    window.addEventListener('scroll', function() {
+      const scrollProgress = document.getElementById('scroll-progress');
+      const scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+      const scrollHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      const scrollPercent = (scrollTop / scrollHeight) * 100;
+      scrollProgress.style.width = scrollPercent + '%';
+    });
+  </script>
   <div class="scroll-progress" id="scroll-progress"></div>
   <nav class="navbar">
     <div class="container">
@@ -109,6 +109,8 @@
       </div>
     </section>
   </main>
+
+  <a href="#top" class="footer-banner"></a>
 
   <footer class="footer">
     <div class="container">
