--- a/projects.html
+++ b/projects.html
@@ -7,21 +7,21 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="statics/styles.css">
 </head>
-<script>
-  function toggleMenu() {
-    document.querySelector('.nav-links').classList.toggle('active');
-  }
+<body id="top">
+  <a href="#top" class="top-banner"></a>
+  <script>
+    function toggleMenu() {
+      document.querySelector('.nav-links').classList.toggle('active');
+    }
 
-  // Scroll progress bar
-  window.addEventListener('scroll', function() {
-    const scrollProgress = document.getElementById('scroll-progress');
-    const scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-    const scrollHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-    const scrollPercent = (scrollTop / scrollHeight) * 100;
-    scrollProgress.style.width = scrollPercent + '%';
-  });
-</script>
-<body>
+    window.addEventListener('scroll', function() {
+      const scrollProgress = document.getElementById('scroll-progress');
+      const scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+      const scrollHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      const scrollPercent = (scrollTop / scrollHeight) * 100;
+      scrollProgress.style.width = scrollPercent + '%';
+    });
+  </script>
   <div class="scroll-progress" id="scroll-progress"></div>
   <nav class="navbar">
     <div class="container">
@@ -226,6 +226,8 @@
       </div>
     </section>
   </main>
+
+  <a href="#top" class="footer-banner"></a>
 
   <footer class="footer">
     <div class="container">
