fixed resume path

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="#work">work</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="services.html">services</a></li>
-        <li><a href="resume.pdf">resume</a></li>
+        <li><a href="images/resume.pdf">resume</a></li>
         <li><a href="contact.html">contact</a></li>
       </ul>
     </div>
